# pythonweb_hw14

./: .gitignore  compose.yaml  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
migrations/: env.py
part_1/: faker_db_filler.py  main.py
part_1/contacts/: routes.py
part_1/email_service/: routes.py
part_1/migrations/: env.py
part_1/migrations/versions/: 2024_04_24_11-01-0d91a85e4a73_update.py
part_1/users/: routes.py
part_2/: hw10.sqlite3
part_2/app_quotes/: models.py  urls.py  views.py
part_2/app_quotes/migrations/: 0001_initial.py
part_2/app_quotes/static/app_quotes/: normalize.css  styles.css
part_2/app_quotes/templates/app_quotes/: addauthor.html  addquote.html  author_info.html  authors.html  base.html  index.html  login.html  register.html  reset_password.html  tagged-quotes.html  tags.html
part_2/app_quotes/templates/users/: password_reset_email.html
part_2/hw10/: settings.py  urls.py
part_2/mongo_migration/: mongo_2_pg.py  odm_mongo.py  orm_alchemy.py
src/: alembic.ini  db.py  dev.env  faker_db_filler.py  hw11_api.sqlite  hw12_api.sqlite  main.py  models.py  routes.py  settings.py
src/auth/: models.py  orms.py  routes.py  service.py
src/contacts/: models.py  orms.py  routes.py
src/email/: routes.py
src/email/templates/: confirmation.html
src/email_service/: routes.py
src/migrations/: env.py
src/migrations/versions/: 2024_04_13_12-10-582f54c9f6d3_init.py  2024_04_13_16-12-d0d0f22cfa12_phone_field.py  2024_04_16_10-48-db1df57014ec_init.py  2024_04_18_09-52-636e4ead65a9_init.py  2024_04_19_10-11-1553ca2fe79a_init_structure.py  2024_04_24_11-03-7699ebc8292d_email_confirmed_for_users.py  2024_04_24_14-49-cc38d19b2fab_avatar_url_added_for_users.py
src/users/: routes.py
tests/: conftest.py  test_auth_service.py  test_auth_service_unittest.py  test_contact.py  test_contact_pytest.py
