[tool.poetry]
name = "pythonweb-hw14"
version = "0.1.0"
description = ""
authors = ["Dmytro Tarasenko <ug.dotenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
sphinx = "^7.3.7"
fastapi-limiter = "^0.1.6"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.3"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
